styles.css
/* Global */
:root {
  /* Color */
  --color-white: #ffffff;
  --color-light-white: #eeeeee;
  --color-dark-white: #f2ede9;
  --color-pink: #f8ddca;
  --color-dark-pink: #c78e81;
  --color-grey-pink: #dbb9b2;
  --color-dark-grey: #4d4d4d;
  --color-grey: #616161;
  --color-light-grey: #e3dcdc;
  --color-grey-blue: #204a5c;
  --color-blue: #73aace;
  --color-black: #000000;
  --color-yellow: #fff7d1;

  /* Font size */
  --font-large: 48px;
  --font-medium: 28px;
  --font-regular: 18px;
  --font-small: 16px;
  --font-micro: 14px;

  /* Font weight */
  --weight-bold: 700;
  --weight-semi-bold: 600;
  --weight-regular: 400;

  /* Size */
  --size-border-radius: 4px;

  /* Animatin */
  --animation-duration: 300ms;
}

/* Universal tags */
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Quicksand', sans-serif;
  cursor: default;
}

a {
  text-decoration: none;
  color: var(--color-white);
}

ul {
  list-style: none;
  /* padding-left: 0; */
}

li {
  line-height: 30px;
  font-weight: var(--weight-semi-bold);
}

button {
  background-color: transparent;
  cursor: pointer;
  border: none;
  outline: none;
}

/* Typography */
h1 {
  font-size: var(--font-large);
  font-weight: var(--weight-bold);
  color: var(--color-grey-blue);
  margin: 16px 0px;
  /* text-transform: uppercase; */
}

h2 {
  font-size: var(--font-medium);
  font-weight: var(--weight-semi-bold);
  color: var(--color-black);
  margin: 8px 0;
}

h3 {
  font-size: var(--font-regular);
  font-weight: var(--weight-regular);
  color: var(--color-black);
  margin: 8px 0;
  line-height: 30px;
}

p {
  font-size: var(--font-regular);
  font-weight: var(--weight-regular);
  color: var(--color-black);
  margin: 4px 0;
}

/* Section common */
.section {
  padding: 50px;
  text-align: center;
  margin: auto;
}

.section__container {
  max-width: 1024px;
}

/* Navbar */
#navbar {
  position: fixed;
  width: 100%;
  display: flex;
  justify-content: space-between;
  background-color: transparent;
  align-items: center;
  color: var(--color-light-grey);
  padding: 0 16px;
  transition: all var(--animation-duration) ease-in-out;
  z-index: 1;
}

#navbar.navbar__dark {
  background-color: var(--color-grey-blue);
}

#logo {
  border-radius: 50%;
}

.navbar__menu {
  display: flex;
  padding: 0;
}

.navbar__menu__item {
  padding: 8px 12px;
  margin: 0 4px;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: var(--size-border-radius);
  font-weight: var(--weight-semi-bold);
}

.navbar__menu__item:hover {
  border-color: var(--color-pink);
  border-radius: var(--size-border-radius);
  background-color: var(--color-dark-pink);
}

.navbar__toggle-btn {
  position: absolute;
  top: 16px;
  right: 16px;
  font-size: 24px;
  color: var(--color-light-grey);
  display: none;
}

/* Home */
#home {
  background: url('imgs/home_bg.png') center/cover no-repeat;
}

.home__container {
  padding: 20%;
}

/* About */
.about__content {
  display: flex;
  justify-content: center;
}

.about__avatar {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  border: 2px solid var(--color-pink);
  margin: 20px 60px;
}

.about__description {
  align-self: center;
}

.contact__btn {
  border: 1px solid var(--color-pink);
  border-radius: var(--size-border-radius);
  font-size: var(--font-regular);
  padding: 8px 24px;
  margin-top: 24px;
  background-color: var(--color-dark-pink);
  color: var(--color-dark-white);
  transition: all var(--animation-duration) ease-in;
}

.contact__btn:hover {
  transform: scale(1.1);
  color: var(--color-grey);
  border: 2px solid var(--color-pink);
  background-color: transparent;
}

/* Skills */
#skills__container {
  display: flex;
  justify-content: space-between;
  margin: 0 80px;
}

.skill {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.skill__icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 150px;
  height: 150px;
  font-size: 70px;
  color: var(--color-dark-pink);
  border: 1px solid var(--color-pink);
  border-radius: 50%;
  margin: 20px 0 20px 0;
}

.skill__items {
  padding: 0;
}

.skill__icon i {
  transition: all var(--animation-duration) ease;
}

.skill__icon:hover i {
  color: var(--color-light-grey);
  transform: rotate(-15deg) scale(1.2);
}

.skill__title {
  font-weight: var(--weight-semi-bold);
}

.skill__items {
  color: var(--color-grey);
}

/* Experience */
#experience {
  background-color: var(--color-dark-white);
  margin: 40px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.experience {
  background-color: var(--color-grey-pink);
  display: flex;
  margin: 24px 16px;
  border-radius: var(--size-border-radius);
}

.experience__detail {
  width: 100%;
  height: 100%;
  padding: 16px;
  line-height: 24px;
  display: flex;
  align-items: center;
}

.experience__detail__header {
  background-color: var(--color-dark-pink);
  border-radius: var(--size-border-radius);
  padding: 10px;
  flex-basis: 30%;
}

.experience__detail__body {
  margin-left: 20px;
  flex-basis: 70%;
}

.experience__detail h3 {
  color: var(--color-light-grey);
  font-weight: var(--weight-semi-bold);
  text-align: center;
}

.experience__detail__body i {
  font-size: 12px;
}

.experience__detail__body p {
  text-align: start;
}

.experience__detail__body li {
  text-align: start;
  padding-left: 24px;
  line-height: 24px;
  font-weight: var(--font-regular);
}

/* Projects */
#projects {
  margin: 40px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project__categories {
  margin: 40px 0;
  display: flex;
  justify-content: center;
}

.category__btn {
  border: 1px solid var(--color-pink);
  border-radius: var(--size-border-radius);
  font-size: var(--font-regular);
  padding: 8px 48px;
  color: var(--color-grey);
  position: relative;
}

.category__btn.selected,
.category__btn:hover {
  background-color: var(--color-dark-pink);
  color: var(--color-dark-white);
}

.category__btn.selected .category__count,
.category__btn:hover .category__count {
  opacity: 1;
  top: 0;
}

.category__count {
  background-color: var(--color-pink);
  border-radius: 50%;
  color: var(--color-grey);
  width: 24px;
  height: 24px;
  line-height: 24px;
  display: inline-block;
  position: absolute;
  top: -20px;
  right: 16px;
  opacity: 0;
  transition: all var(--animation-duration) ease-in;
}

.projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  opacity: 1;
  transition: all var(--animation-duration) ease-out;
}

.projects.anim-out {
  opacity: 0;
  transform: scale(0.96) translateY(40px);
}

.project {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 300px;
  height: 300px;
  margin: 24px 16px;
  background-color: var(--color-dark-white);
  border-radius: var(--size-border-radius);
}

.project.invisible {
  display: none;
}

.project__img {
  max-width: 100%;
  max-height: 100%;
}

.project__description h3 {
  color: var(--color-dark-pink);
  font-weight: var(--weight-semi-bold);
}

.project__description p {
  color: var(--color-white);
  font-size: var(--font-micro);
}

.project__description h3::after {
  content: '';
  display: block;
  position: relative;
  left: 50%;
  width: 50px;
  height: 2px;
  transform: translateX(-50%);
  margin-top: 8px;
  background-color: var(--color-pink);
  border-radius: var(--size-border-radius);
}

.project__description {
  position: absolute;
  background-color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0;
  transition: all var(--animation-duration) ease-in;
  transform: translateY(10px);
  border-radius: var(--size-border-radius);
  padding: 0 20px;
}

.project:hover .project__description {
  opacity: 0.8;
  transform: translateY(0);
}

/* Testimonials */
#testimonials {
  background-color: var(--color-pink);
  margin-top: 40px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.testimonial {
  background-color: #fff3ea;
  border-radius: var(--size-border-radius);
  margin: 24px 16px;
  padding: 16px;
}

.testimonial_detail {
  padding: 16px;
}

.testimonial_detail p,
.testimonial_detail i {
  color: var(--color-grey);
}

.name a,
.name i {
  color: var(--color-dark-pink);
}

/* Contact */
#contact {
  background-color: var(--color-dark-pink);
  padding: 30px;
}

#contact__links {
  display: flex;
  justify-content: center;
  transition: all var(--animation-duration) ease-in;
}

#contact__links i:hover {
  transform: scale(1.2);
  color: var(--color-grey-blue);
}

.contact__icon {
  width: 60px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact__icon i {
  font-size: 30px;
  color: var(--color-dark-white);
}

#contact__title,
#contact__email,
#contact__rights {
  color: var(--color-dark-white);
  margin-top: 20px;
}

/* Scroll */
.arrow-up {
  position: fixed;
  bottom: 50px;
  right: 50px;
  width: 50px;
  height: 50px;
  font-size: 50px;
  color: var(--color-pink);
  background-color: var(--color-white);
  border-radius: 50%;
  padding: 0;
  opacity: 0;
  pointer-events: none;
  transition: opacity 300ms ease-in;
}

.arrow-up.visible {
  opacity: 1;
  pointer-events: auto;
}

/* For below 768px screen width */
@media screen and (max-width: 768px) {
  :root {
    /* Font size */
    --font-large: 30px;
    --font-medium: 18px;
    --font-regular: 16px;
    --font-small: 14px;
    --font-micro: 12px;
  }

  .navbar__toggle-btn {
    display: block;
  }

  #navbar {
    flex-direction: column;
    align-items: flex-start;
    padding-bottom: 10px;
  }

  #navbar.navbar--dark {
    padding-bottom: 16px;
    background-color: 'transparent';
  }

  .navbar__menu {
    flex-direction: column;
    text-align: center;
    width: 100%;
    padding: 0;
    display: none;
    background-color: var(--color-grey-blue);
  }

  .navbar__menu.open {
    display: block;
  }

  #navbar.open {
    background-color: var(--color-grey-blue);
  }

  .navbar__logo {
    text-align: center;
  }

  .section {
    padding: 16px;
    padding-top: 50px;
  }

  #logo {
    width: 60%;
    margin-top: 12px;
  }

  .about__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 20px;
  }

  .about__avatar {
    width: 180px;
    height: 180px;
  }

  #skills__container {
    flex-direction: column;
  }

  .skill {
    margin-bottom: 38px;
  }

  #experience {
    margin: 0;
  }

  .experience__detail {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .experience__detail__header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 12px;
    width: 100%;
  }

  .experience__detail__header h2 {
    line-height: 32px;
  }

  .experience__detail__header h3,
  .experience__detail__body p {
    font-size: var(--font-small);
    line-height: 24px;
  }

  .experience__detail__body {
    align-self: flex-start;
  }

  #projects {
    padding: 0 16px;
    margin: 20px 0;
  }

  .project__categories {
    margin: 16px 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
  }

  .category__count {
    right: 4px;
  }

  .category__btn {
    padding: 8px 0;
    width: 40%;
  }

  .project {
    flex-grow: 1;
    margin: 10px 16px;
  }

  #testimonials {
    margin-top: 60px;
    padding-top: 24px;
  }

  .arrow-up {
    bottom: 16px;
    right: 16px;
    width: 30px;
    height: 30px;
    font-size: 30px;
  }
}

